--- a/style_texteditor.css
+++ b/style_texteditor.css
@@ -1,3 +1,9 @@
+body {
+	background-image:url("images/photo.jpeg");
+	background-size: cover; 
+}
+
+
 #article {
 	width: 70%;
 	margin-top:1%;
@@ -6,11 +12,17 @@
 
 #titre {
 	width: 40%;
-	margin-top:3%;
+	margin-top:1%;
 	border-radius:0.5em;
 }
 
 #categorie {
+	width: 20%;
+	margin-top:1%;
+	border-radius:0.5em;
+}
+
+#pseudo {
 	width: 20%;
 	margin-top:1%;
 	border-radius:0.5em;
@@ -23,26 +35,69 @@
 }
 
 #titreerr {
-	color:red;
+	color:lightblue;
 }
 
 #articleerr {
-	color:red;
+	color:lightblue;
 }
 
 #caterr {
-	color:red;
+	color:lightblue;
+}
+
+#pseudoerr {
+	color:lightblue;
 }
 
 #redac {
 	font-family: helvetica;
 	color:#808080;
 	font-size:32px;
-	margin-top:10%;
+	margin-top:5%;
+	color:white;
 }
 
-body {
-	background-color:#f8f8f8;
+.editext {
+	background-color:#303030;
+	-webkit-box-shadow: 6px 7px 15px 0px rgba(66,66,66,1);
+	-moz-box-shadow: 6px 7px 15px 0px rgba(66,66,66,1);
+	box-shadow: 6px 7px 15px 0px rgba(66,66,66,1);
+	margin-top:3em;
+	border-radius:0.5em;
+	padding-bottom:4%;
+}
+
+#button {
+	background-color:#29d4ff;
+	border:none;
+	border-radius:0.5em;
+	padding:0.5em 2em 0.5em 2em;
+	font-weight: bold;
+	color:white;
+}
+
+#publication {
+	color:white;
+	font-size:2em;
+	text-align:center;
+	margin-top:1em;
+}
+
+#accueil {
+	background-color:#29d4ff;
+	border:none;
+	border-radius:0.5em;
+	padding:0.5em 2em 0.5em 2em;
+	font-weight: bold;
+	color:white;
+	text-decoration:none;
+	margin-left: 35em;
+}
+
+hr {
+	width: 70%;
+	margin-right: 20em;
 }
 
 /*yep*/
