--- a/style_texteditor.css
+++ b/style_texteditor.css
@@ -14,18 +14,21 @@ body {
 	width: 40%;
 	margin-top:1%;
 	border-radius:0.5em;
+	border:none;
 }
 
 #categorie {
 	width: 20%;
 	margin-top:1%;
 	border-radius:0.5em;
+	border:none;
 }
 
 #pseudo {
 	width: 20%;
 	margin-top:1%;
 	border-radius:0.5em;
+	border:none;
 }
 
 .button-group ul {
